--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <div class="container">
     <div class="box-1">
       <div class="flex-item-1">
-        Learn to code by <br> watching others
+        Learn to code by<br> 
+        watching others
       </div>
       <br>
       <div class="flex-item-2">
